--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,24 @@
+attrs==23.2.0
 aws-cdk-lib==2.148.0
-constructs>=10.0.0,<11.0.0
+aws-cdk.asset-awscli-v1==2.2.202
+aws-cdk.asset-kubectl-v20==2.1.2
+aws-cdk.asset-node-proxy-agent-v6==2.0.3
+cattrs==23.2.3
+cffi==1.16.0
+constructs==10.3.0
+cryptography==42.0.8
+diagrams==0.23.4
+Faker==26.0.0
+graphviz==0.20.3
+importlib_resources==6.4.0
+Jinja2==3.1.4
+jsii==1.101.0
+MarkupSafe==2.1.5
+publication==0.0.3
+pycparser==2.22
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+six==1.16.0
+typed_ast==1.5.5
+typeguard==2.13.3
+typing_extensions==4.12.2
