Preped for demo
IMplemented simplejson because dynamodb hates accuracy
implemented transaction generation with dynamo products
corrected function signatures for data generation
corrected dags for accuracy
updated dockerfile for additional pip installs
cleaned up imports

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,6 +9,8 @@ COPY entrypoint.sh /entrypoint.sh
 
 # For python dependencies
 COPY requirements.txt /requirements.txt
+RUN pip install --user --upgrade pip
+RUN pip install --no-cache-dir --user -r /requirements.txt
 
 # Add directory in which pip installs to PATH
 ENV PATH="/usr/local/airflow/.local/bin:${PATH}"
